--- a/_config.yml
+++ b/_config.yml
@@ -13,13 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Login Jones
+title: Cloud Kafka Bootcamp
 description: > # this means to ignore newlines until "baseurl:"
-  Coding. Design. Algorithms. New Technology. System Architecture.
+  An exercise to implement 5 advanced event based use cases using Confluent Kafka
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: malayalite
-github_username:  lojones
+twitter_username:
+github_username:  Cloud-Kafka-Bootcamp
 
 # Build settings
 markdown: kramdown
@@ -39,4 +39,4 @@ plugins:
 #   - vendor/gems/
 #   - vendor/ruby/
 
-repository: lojones/lojones.github.io
+repository: Cloud-Kafka-Bootcamp/Cloud-Kafka-Bootcamp.github.io.git
