Set theme jekyll-theme-minimal

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ github_username:  Cloud-Kafka-Bootcamp
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-architect
+theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
 
