trying to fix build error

--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ collections:
   events:
     title: Events
     output: true
-    permalink: /:path/
+    permalink: /events/:path/
 
 defaults:
   - scope:
